fix height overflow

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body{
     align-items: center;
     flex-direction: column;
     overflow: hidden;
+    max-width: 90vh;
 }
 
 #div1{
